[package]
name = "reg_script"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
serde = "1.0.204"
sp-core = "34.0.0"
# subxt = "0.37.0"
subxt = { version = "0.37.0", features = ["substrate-compat"] }
toml = "0.8.15"
# pallet-subtensor = { path = "../../bittensor/subtensor/pallets/subtensor" }


tokio = { version = "1.38.1", features = ["full"] }
scale-value = "0.16.0"
