[package]
name = "subnet_registration"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subnet_registration"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
log = { workspace = true }
scale-value = { workspace = true }
serde = { workspace = true }
sp-core = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
toml = { workspace = true }
shared = { workspace = true }
